Pollutant and Type Models added, maps types and pollutants load from DB in maps view

--- a/.env-pg
+++ b/.env-pg
@@ -5,11 +5,11 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
 DB_DATABASE=appramada
-DB_USERNAME=appramada
+DB_USERNAME=postgres
 DB_PASSWORD=lollol12
 
 BROADCAST_DRIVER=log
